# Spotimerge

./: CMakeLists.txt  MergePlaylist.cpp  MergePlaylist.hpp  README.md
Spotimerge/: MergePlaylist.cpp  MergePlaylist.hpp  MergePlaylistTests.cpp  Spotimerge.pro  basebutton.h  copie.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mergeplaylist.h  paste.h  playlistmaker.cpp  playlistmaker.h  redo.h  undo.h
build-Spotimerge-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: ui_mainwindow.h
